--- a/client/src/index.html
+++ b/client/src/index.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.0.272/jspdf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/2.0.16/jspdf.plugin.autotable.js"></script>
     <style>html {overflow-y: hidden}</style>
   </head>
   <body style="height: 100%; width: 100%;  font-family: 'Roboto', sans-serif; color: rgb(75, 58, 58);">
