--- a/client/src/index.html
+++ b/client/src/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>html {overflow-y: hidden}</style>
   </head>
-  <body style="height: 100%; width: 100%;  font-family: 'Roboto', sans-serif; color: rgb(75, 58, 58);">
+  <body style="height: 100%; width: 100%;  font-family: verdana,sans-serif; color: rgb(75, 58, 58);">
     <app-root> 
       <div class='loader-container'>
         <i class='layer'></i>
